adding datavyz submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "ml"]
 	path = ml
 	url = https://github.com/yzerlaut/ml.git
+[submodule "datavyz"]
+	path = datavyz
+	url = https://github.com/yzerlaut/datavyz
